<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="comment"
            type="com.jc.recyclerexercise.models.Comment" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/name"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text='@{comment.name ?? ""}'
            android:textSize="16sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:id="@+id/emailHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/email"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{comment.email ?? ""}'
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/bodyHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/body"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/bodyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{comment.body ?? ""}'
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

    </LinearLayout>
</layout>