<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="user"
            type="com.jc.recyclerexercise.models.User" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/name"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{user.name ?? ""}'
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:id="@+id/userNameHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/username"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{user.username ?? ""}'
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/phoneHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/phone"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{user.phone ?? ""}'
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

    </LinearLayout>
</layout>